trunk/Archive2/7d/484ca7aefa1f5b/output
main.cpp:13:66: error: arithmetic on a pointer to void
    void *P_computed_from_void_star = reinterpret_cast<void*>(P) + 10;
                                      ~~~~~~~~~~~~~~~~~~~~~~~~~~ ^
1 error generated.
